# caligraphers-nightmare

./: CMakeLists.txt  README.md  main.cpp
AllButtonsItems/: arcadeItems.cpp  arcadeItems.h  fontItems.cpp  fontItems.h  gForPointsItems.cpp  gForPointsItems.h  gameItems.cpp  gameItems.h  menuItems.cpp  menuItems.h
Assets/: words.txt
Controller/: keyboardController.cpp  keyboardController.h  mouseController.cpp  mouseController.h
GameHeart/: ClassForGame.cpp  ClassForGame.h  MethodsForGame.cpp  MethodsForGame.h
